// Code generated by skv2. DO NOT EDIT.

syntax = "proto3";
package fed.rpc.solo.io;

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

option go_package = "github.com/solo-io/solo-projects/projects/apiserver/pkg/api/fed.rpc/v1";
import "github.com/solo-io/solo-projects/projects/gloo-fed/api/fed.gloo/v1/upstream.proto";
import "github.com/solo-io/solo-projects/projects/gloo-fed/api/fed.gloo/v1/upstream_group.proto";
import "github.com/solo-io/solo-projects/projects/gloo-fed/api/fed.gloo/v1/settings.proto";
import "github.com/solo-io/skv2/api/core/v1/core.proto";
import "github.com/solo-io/solo-projects/projects/apiserver/api/rpc.edge.gloo/v1/common.proto";

message FederatedUpstream {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .fed.gloo.solo.io.FederatedUpstreamSpec spec = 2;
    .fed.gloo.solo.io.FederatedUpstreamStatus status = 3;
}

message FederatedUpstreamGroup {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .fed.gloo.solo.io.FederatedUpstreamGroupSpec spec = 2;
    .fed.gloo.solo.io.FederatedUpstreamGroupStatus status = 3;
}

message FederatedSettings {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .fed.gloo.solo.io.FederatedSettingsSpec spec = 2;
    .fed.gloo.solo.io.FederatedSettingsStatus status = 3;
}

message ListFederatedUpstreamsRequest {}

message ListFederatedUpstreamsResponse {
    repeated FederatedUpstream federated_upstreams = 1;
}

message GetFederatedUpstreamYamlRequest {
    .core.skv2.solo.io.ObjectRef federated_upstream_ref = 1;
}

message GetFederatedUpstreamYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message ListFederatedUpstreamGroupsRequest {}

message ListFederatedUpstreamGroupsResponse {
    repeated FederatedUpstreamGroup federated_upstream_groups = 1;
}

message GetFederatedUpstreamGroupYamlRequest {
    .core.skv2.solo.io.ObjectRef federated_upstream_group_ref = 1;
}

message GetFederatedUpstreamGroupYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message ListFederatedSettingsRequest {}

message ListFederatedSettingsResponse {
    repeated FederatedSettings federated_settings = 1;
}

message GetFederatedSettingsYamlRequest {
    .core.skv2.solo.io.ObjectRef federated_settings_ref = 1;
}

message GetFederatedSettingsYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

service FederatedGlooResourceApi {

    rpc ListFederatedUpstreams (ListFederatedUpstreamsRequest) returns (ListFederatedUpstreamsResponse) {}
    rpc GetFederatedUpstreamYaml (GetFederatedUpstreamYamlRequest) returns (GetFederatedUpstreamYamlResponse) {}

    rpc ListFederatedUpstreamGroups (ListFederatedUpstreamGroupsRequest) returns (ListFederatedUpstreamGroupsResponse) {}
    rpc GetFederatedUpstreamGroupYaml (GetFederatedUpstreamGroupYamlRequest) returns (GetFederatedUpstreamGroupYamlResponse) {}

    rpc ListFederatedSettings (ListFederatedSettingsRequest) returns (ListFederatedSettingsResponse) {}
    rpc GetFederatedSettingsYaml (GetFederatedSettingsYamlRequest) returns (GetFederatedSettingsYamlResponse) {}
}